--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "FRCDashboard",
-  "version": "v2.0.0",
-  "description": "Dashboard for extra robot controls in FRC. Experimental Electron environment.",
-  "main": "main.js",
+  "productName": "FRCDashBoard",
+  "version": "2.1.0",
+  "description": "Robot control dashboard boilerplate for FRC.",
+  "main": "src/main.js",
   "scripts": {
-    "start": "electron main.js",
-    "pack": "build --dir",
-    "dist": "build"
+    "start": "electron .",
+    "package-mac": "electron-packager . --platform=darwin --icon=images/icon.icns --out dist/",
+    "package-linux": "electron-packager . --platform=linux --icon=images/icon.png --out dist/",
+    "package-win": "electron-packager . --platform=win32 --icon=images/icon.ico --out dist/"
   },
   "repository": {
     "type": "git",
@@ -19,14 +21,10 @@
   },
   "homepage": "http://frcdashboard.github.io",
   "devDependencies": {
-    "electron": "^1.2.0",
-    "electron-builder": "~15.2.0"
+    "electron": "1.7.9",
+    "electron-packager": "^10.1.1"
   },
   "dependencies": {
-    "wpilib-nt-client": "^1.1.3"
-  },
-  "build": {
-    "appId": "FRCDashboard",
-    "productName": "FRCDashboard"
+    "wpilib-nt-client": "^1.4.0"
   }
 }
